# test-state-machine-client

./: CHANGELOG.md  Cargo.toml  README.md
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
src/: lib.rs  management_canister.rs
